# creative-denoising-autoencoder

./: .gitignore  README.md  REPORT.md  cell14_out.txt  cell3_tail.txt  cell4.txt  main.ipynb  main.py  pyproject.toml  requirements.txt  struct2.txt  structure.txt
.streamlit/: config.toml
checkpoints/cdae/: best.pt
checkpoints/dncnn/: best.pt
checkpoints/unet/: best.pt
configs/: config.yaml
frontend/: README.md  app_streamlit.py
src/: __init__.py  dae_inference.py  dae_model.py  dataset.py  degradation.py  evaluate.py  losses.py  models.py  train.py  utils.py
