[project]
name = "creative-denoising-autoencoder"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "numpy>=2.4.2",
  "pandas>=3.0.0",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
