[project]
name = "creative-denoising-autoencoder"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "albumentations>=2.0.8",
  "ipywidgets>=8.1.8",
  "kagglehub>=1.0.0",
  "matplotlib>=3.10.8",
  "numpy>=2.4.2",
  "opencv-contrib-python>=4.13.0.92",
  "opencv-python>=4.13.0.92",
  "pandas>=3.0.0",
  "scikit-image>=0.26.0",
  "streamlit",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "tqdm>=4.67.3",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.pyright]
reportUnusedImport = "none"
